[OLC2]Proyecto2_201603127/Analisis/MiniC/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> lista_sentencias
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> metodos
Rule 5     instruccion -> funciones
Rule 6     instruccion -> structs
Rule 7     metodos -> VOID ID PARENTA PARENTC bloque_sentencias
Rule 8     metodos -> VOID ID PARENTA lista_param PARENTC bloque_sentencias
Rule 9     funciones -> tipo ID PARENTA PARENTC bloque_sentencias
Rule 10    funciones -> INT MAIN PARENTA PARENTC bloque_sentencias
Rule 11    funciones -> tipo ID PARENTA lista_param PARENTC bloque_sentencias
Rule 12    structs -> STRUCT ID LLAVEA declaracion LLAVEC PUNTOCOMA
Rule 13    lista_param -> lista_param COMA param
Rule 14    lista_param -> param
Rule 15    param -> tipo ID
Rule 16    bloque_sentencias -> LLAVEA lista_sentencias LLAVEC
Rule 17    bloque_sentencias -> LLAVEA LLAVEC
Rule 18    lista_sentencias -> lista_sentencias sentencia
Rule 19    lista_sentencias -> sentencia
Rule 20    lista_sentencias -> <empty>
Rule 21    sentencia -> declaracion PUNTOCOMA
Rule 22    sentencia -> asignacion PUNTOCOMA
Rule 23    sentencia -> fun_if
Rule 24    sentencia -> fun_switch
Rule 25    sentencia -> fun_for
Rule 26    sentencia -> fun_while
Rule 27    sentencia -> fun_do_while
Rule 28    sentencia -> print
Rule 29    sentencia -> fun_return PUNTOCOMA
Rule 30    sentencia -> fun_break PUNTOCOMA
Rule 31    sentencia -> incre_decre PUNTOCOMA
Rule 32    sentencia -> fun_continue PUNTOCOMA
Rule 33    declaracion -> tipo lista_declaracion
Rule 34    lista_declaracion -> lista_declaracion COMA bloque_declara
Rule 35    lista_declaracion -> bloque_declara
Rule 36    bloque_declara -> declaraConVal
Rule 37    bloque_declara -> declaraSinVal
Rule 38    declaraConVal -> tipo_ID IGUAL operaciones
Rule 39    declaraConVal -> ID CORCHEA CORCHEC IGUAL CADENA
Rule 40    declaraConVal -> tipo_ID IGUAL SCANF PARENTA PARENTC
Rule 41    declaraConVal -> tipo_ID IGUAL LLAVEA lista_filas LLAVEC
Rule 42    declaraConVal -> tipo_ID IGUAL LLAVEA lista_val LLAVEC
Rule 43    declaraSinVal -> tipo_ID
Rule 44    tipo -> INT
Rule 45    tipo -> CHAR
Rule 46    tipo -> DOUBLE
Rule 47    tipo -> FLOAT
Rule 48    tipo_ID -> ID
Rule 49    tipo_ID -> ID dimension
Rule 50    dimension -> dimension CORCHEA val CORCHEC
Rule 51    dimension -> CORCHEA val CORCHEC
Rule 52    dimension -> CORCHEA CORCHEC
Rule 53    asignacion -> lista_asignacion
Rule 54    lista_asignacion -> lista_asignacion COMA bloque_asignacion
Rule 55    lista_asignacion -> bloque_asignacion
Rule 56    bloque_asignacion -> tipo_ID tipo_asignacion operaciones
Rule 57    bloque_asignacion -> tipo_ID IGUAL SCANF PARENTA PARENTC
Rule 58    bloque_asignacion -> tipo_ID tipo_asignacion LLAVEA lista_filas LLAVEC
Rule 59    bloque_asignacion -> tipo_ID tipo_asignacion LLAVEA lista_val LLAVEC
Rule 60    tipo_asignacion -> IGUAL
Rule 61    tipo_asignacion -> MASIGUAL
Rule 62    tipo_asignacion -> MENOSIGUAL
Rule 63    tipo_asignacion -> PORIGUAL
Rule 64    tipo_asignacion -> DIVIIGUAL
Rule 65    tipo_asignacion -> RESIGUAL
Rule 66    tipo_asignacion -> IZQIGUAL
Rule 67    tipo_asignacion -> DERIGUAL
Rule 68    tipo_asignacion -> ANDIGUAL
Rule 69    tipo_asignacion -> ORIGUAL
Rule 70    tipo_asignacion -> XORIGUAL
Rule 71    lista_filas -> lista_filas COMA fila
Rule 72    lista_filas -> fila
Rule 73    fila -> LLAVEA lista_columna LLAVEC
Rule 74    lista_columna -> lista_columna COMA columna
Rule 75    lista_columna -> columna
Rule 76    columna -> operaciones
Rule 77    lista_val -> lista_val COMA val
Rule 78    lista_val -> val
Rule 79    fun_if -> IF PARENTA operaciones PARENTC bloque_sentencias
Rule 80    fun_if -> IF PARENTA operaciones PARENTC bloque_sentencias ELSE fun_if
Rule 81    fun_if -> IF PARENTA operaciones PARENTC bloque_sentencias ELSE bloque_sentencias
Rule 82    fun_switch -> SWITCH PARENTA operaciones PARENTC LLAVEA list_switch default LLAVEC
Rule 83    fun_switch -> SWITCH PARENTA operaciones PARENTC LLAVEA list_switch LLAVEC
Rule 84    fun_switch -> SWITCH PARENTA operaciones PARENTC LLAVEA default LLAVEC
Rule 85    fun_switch -> SWITCH PARENTA operaciones PARENTC LLAVEA LLAVEC
Rule 86    list_switch -> list_switch cont_switch
Rule 87    list_switch -> cont_switch
Rule 88    cont_switch -> CASE val DOSPUNTOS lista_sentencias
Rule 89    cont_switch -> CASE val DOSPUNTOS
Rule 90    default -> DEFAULT DOSPUNTOS lista_sentencias
Rule 91    default -> DEFAULT DOSPUNTOS
Rule 92    fun_for -> FOR PARENTA declaracion PUNTOCOMA operaciones PUNTOCOMA incre_decre PARENTC bloque_sentencias
Rule 93    fun_for -> FOR PARENTA asignacion PUNTOCOMA operaciones PUNTOCOMA incre_decre PARENTC bloque_sentencias
Rule 94    fun_while -> WHILE PARENTA operaciones PARENTC bloque_sentencias
Rule 95    fun_do_while -> DO bloque_sentencias WHILE PARENTA operaciones PARENTC PUNTOCOMA
Rule 96    fun_return -> RETURN operaciones
Rule 97    fun_return -> RETURN incre_decre
Rule 98    fun_return -> RETURN
Rule 99    fun_break -> BREAK
Rule 100   incre_decre -> INCREMENTO val
Rule 101   incre_decre -> DECREMENTO val
Rule 102   incre_decre -> val INCREMENTO
Rule 103   incre_decre -> val DECREMENTO
Rule 104   print -> PRINTF PARENTA val PARENTC PUNTOCOMA
Rule 105   fun_continue -> CONTINUE
Rule 106   operaciones -> operaciones MAS operaciones
Rule 107   operaciones -> operaciones MENOS operaciones
Rule 108   operaciones -> operaciones POR operaciones
Rule 109   operaciones -> operaciones DIVICION operaciones
Rule 110   operaciones -> operaciones RESIDUO operaciones
Rule 111   operaciones -> operaciones AND1 operaciones
Rule 112   operaciones -> operaciones OR1 operaciones
Rule 113   operaciones -> operaciones IGUALIGUAL operaciones
Rule 114   operaciones -> operaciones DIFERENTE operaciones
Rule 115   operaciones -> operaciones MAYORIGUAL operaciones
Rule 116   operaciones -> operaciones MENORIGUAL operaciones
Rule 117   operaciones -> operaciones MAYOR operaciones
Rule 118   operaciones -> operaciones MENOR operaciones
Rule 119   operaciones -> operaciones XOR operaciones
Rule 120   operaciones -> operaciones AND2 operaciones
Rule 121   operaciones -> operaciones OR2 operaciones
Rule 122   operaciones -> operaciones SHIFTI operaciones
Rule 123   operaciones -> operaciones SHIFTD operaciones
Rule 124   operaciones -> MENOS operaciones
Rule 125   operaciones -> EXCLAMA operaciones
Rule 126   operaciones -> NOT operaciones
Rule 127   operaciones -> AND2 operaciones
Rule 128   operaciones -> operaciones TERNARIO operaciones DOSPUNTOS operaciones
Rule 129   operaciones -> incre_decre
Rule 130   operaciones -> val
Rule 131   operaciones -> PARENTA operaciones PARENTC
Rule 132   val -> ENTERO
Rule 133   val -> DECIMAL
Rule 134   val -> CADENA
Rule 135   val -> CHAR
Rule 136   val -> ID
Rule 137   val -> variables_array
Rule 138   variables_array -> ID indices
Rule 139   indices -> indices indice
Rule 140   indices -> indice
Rule 141   indice -> CORCHEA val CORCHEC

Terminals, with rules where they appear

AND1                 : 111
AND2                 : 120 127
ANDIGUAL             : 68
BREAK                : 99
CADENA               : 39 134
CASE                 : 88 89
CHAR                 : 45 135
COMA                 : 13 34 54 71 74 77
CONTINUE             : 105
CORCHEA              : 39 50 51 52 141
CORCHEC              : 39 50 51 52 141
DECIMAL              : 133
DECREMENTO           : 101 103
DEFAULT              : 90 91
DERIGUAL             : 67
DIFERENTE            : 114
DIVICION             : 109
DIVIIGUAL            : 64
DO                   : 95
DOSPUNTOS            : 88 89 90 91 128
DOUBLE               : 46
ELSE                 : 80 81
ENTERO               : 132
EXCLAMA              : 125
FLOAT                : 47
FOR                  : 92 93
ID                   : 7 8 9 11 12 15 39 48 49 136 138
IF                   : 79 80 81
IGUAL                : 38 39 40 41 42 57 60
IGUALIGUAL           : 113
INCREMENTO           : 100 102
INT                  : 10 44
IZQIGUAL             : 66
LLAVEA               : 12 16 17 41 42 58 59 73 82 83 84 85
LLAVEC               : 12 16 17 41 42 58 59 73 82 83 84 85
MAIN                 : 10
MAS                  : 106
MASIGUAL             : 61
MAYOR                : 117
MAYORIGUAL           : 115
MENOR                : 118
MENORIGUAL           : 116
MENOS                : 107 124
MENOSIGUAL           : 62
NOT                  : 126
OR1                  : 112
OR2                  : 121
ORIGUAL              : 69
PARENTA              : 7 8 9 10 11 40 57 79 80 81 82 83 84 85 92 93 94 95 104 131
PARENTC              : 7 8 9 10 11 40 57 79 80 81 82 83 84 85 92 93 94 95 104 131
POR                  : 108
PORIGUAL             : 63
PRINTF               : 104
PUNTOCOMA            : 12 21 22 29 30 31 32 92 92 93 93 95 104
RESIDUO              : 110
RESIGUAL             : 65
RETURN               : 96 97 98
SCANF                : 40 57
SHIFTD               : 123
SHIFTI               : 122
STRUCT               : 12
SWITCH               : 82 83 84 85
TERNARIO             : 128
VOID                 : 7 8
WHILE                : 94 95
XOR                  : 119
XORIGUAL             : 70
error                : 

Nonterminals, with rules where they appear

asignacion           : 22 93
bloque_asignacion    : 54 55
bloque_declara       : 34 35
bloque_sentencias    : 7 8 9 10 11 79 80 81 81 92 93 94 95
columna              : 74 75
cont_switch          : 86 87
declaraConVal        : 36
declaraSinVal        : 37
declaracion          : 12 21 92
default              : 82 84
dimension            : 49 50
fila                 : 71 72
fun_break            : 30
fun_continue         : 32
fun_do_while         : 27
fun_for              : 25
fun_if               : 23 80
fun_return           : 29
fun_switch           : 24
fun_while            : 26
funciones            : 5
incre_decre          : 31 92 93 97 129
indice               : 139 140
indices              : 138 139
inicio               : 0
instruccion          : 2 3
instrucciones        : 2
list_switch          : 82 83 86
lista_asignacion     : 53 54
lista_columna        : 73 74
lista_declaracion    : 33 34
lista_filas          : 41 58 71
lista_param          : 8 11 13
lista_sentencias     : 1 16 18 88 90
lista_val            : 42 59 77
metodos              : 4
operaciones          : 38 56 76 79 80 81 82 83 84 85 92 93 94 95 96 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 125 126 127 128 128 128 131
param                : 13 14
print                : 28
sentencia            : 18 19
structs              : 6
tipo                 : 9 11 15 33
tipo_ID              : 38 40 41 42 43 56 57 58 59
tipo_asignacion      : 56 58 59
val                  : 50 51 77 78 88 89 100 101 102 103 104 130 141
variables_array      : 137

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . lista_sentencias
    (18) lista_sentencias -> . lista_sentencias sentencia
    (19) lista_sentencias -> . sentencia
    (20) lista_sentencias -> .
    (21) sentencia -> . declaracion PUNTOCOMA
    (22) sentencia -> . asignacion PUNTOCOMA
    (23) sentencia -> . fun_if
    (24) sentencia -> . fun_switch
    (25) sentencia -> . fun_for
    (26) sentencia -> . fun_while
    (27) sentencia -> . fun_do_while
    (28) sentencia -> . print
    (29) sentencia -> . fun_return PUNTOCOMA
    (30) sentencia -> . fun_break PUNTOCOMA
    (31) sentencia -> . incre_decre PUNTOCOMA
    (32) sentencia -> . fun_continue PUNTOCOMA
    (33) declaracion -> . tipo lista_declaracion
    (53) asignacion -> . lista_asignacion
    (79) fun_if -> . IF PARENTA operaciones PARENTC bloque_sentencias
    (80) fun_if -> . IF PARENTA operaciones PARENTC bloque_sentencias ELSE fun_if
    (81) fun_if -> . IF PARENTA operaciones PARENTC bloque_sentencias ELSE bloque_sentencias
    (82) fun_switch -> . SWITCH PARENTA operaciones PARENTC LLAVEA list_switch default LLAVEC
    (83) fun_switch -> . SWITCH PARENTA operaciones PARENTC LLAVEA list_switch LLAVEC
    (84) fun_switch -> . SWITCH PARENTA operaciones PARENTC LLAVEA default LLAVEC
    (85) fun_switch -> . SWITCH PARENTA operaciones PARENTC LLAVEA LLAVEC
    (92) fun_for -> . FOR PARENTA declaracion PUNTOCOMA operaciones PUNTOCOMA incre_decre PARENTC bloque_sentencias
    (93) fun_for -> . FOR PARENTA asignacion PUNTOCOMA operaciones PUNTOCOMA incre_decre PARENTC bloque_sentencias
    (94) fun_while -> . WHILE PARENTA operaciones PARENTC bloque_sentencias
    (95) fun_do_while -> . DO bloque_sentencias WHILE PARENTA operaciones PARENTC PUNTOCOMA
    (104) print -> . PRINTF PARENTA val PARENTC PUNTOCOMA
    (96) fun_return -> . RETURN operaciones
    (97) fun_return -> . RETURN incre_decre
    (98) fun_return -> . RETURN
    (99) fun_break -> . BREAK
    (100) incre_decre -> . INCREMENTO val
    (101) incre_decre -> . DECREMENTO val
    (102) incre_decre -> . val INCREMENTO
    (103) incre_decre -> . val DECREMENTO
    (105) fun_continue -> . CONTINUE
    (44) tipo -> . INT
    (45) tipo -> . CHAR
    (46) tipo -> . DOUBLE
    (47) tipo -> . FLOAT
    (54) lista_asignacion -> . lista_asignacion COMA bloque_asignacion
    (55) lista_asignacion -> . bloque_asignacion
    (132) val -> . ENTERO
    (133) val -> . DECIMAL
    (134) val -> . CADENA
    (135) val -> . CHAR
    (136) val -> . ID
    (137) val -> . variables_array
    (56) bloque_asignacion -> . tipo_ID tipo_asignacion operaciones
    (57) bloque_asignacion -> . tipo_ID IGUAL SCANF PARENTA PARENTC
    (58) bloque_asignacion -> . tipo_ID tipo_asignacion LLAVEA lista_filas LLAVEC
    (59) bloque_asignacion -> . tipo_ID tipo_asignacion LLAVEA lista_val LLAVEC
    (138) variables_array -> . ID indices
    (48) tipo_ID -> . ID
    (49) tipo_ID -> . ID dimension

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for PRINTF resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for INCREMENTO resolved as shift
  ! shift/reduce conflict for DECREMENTO resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for DECIMAL resolved as shift
  ! shift/reduce conflict for CADENA resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    $end            reduce using rule 20 (lista_sentencias -> .)
    IF              shift and go to state 18
    SWITCH          shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22
    PRINTF          shift and go to state 23
    RETURN          shift and go to state 25
    BREAK           shift and go to state 26
    INCREMENTO      shift and go to state 27
    DECREMENTO      shift and go to state 28
    CONTINUE        shift and go to state 29
    INT             shift and go to state 30
    CHAR            shift and go to state 31
    DOUBLE          shift and go to state 32
    FLOAT           shift and go to state 33
    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 36
    CADENA          shift and go to state 37
    ID              shift and go to state 38

  ! IF              [ reduce using rule 20 (lista_sentencias -> .) ]
  ! SWITCH          [ reduce using rule 20 (lista_sentencias -> .) ]
  ! FOR             [ reduce using rule 20 (lista_sentencias -> .) ]
  ! WHILE           [ reduce using rule 20 (lista_sentencias -> .) ]
  ! DO              [ reduce using rule 20 (lista_sentencias -> .) ]
  ! PRINTF          [ reduce using rule 20 (lista_sentencias -> .) ]
  ! RETURN          [ reduce using rule 20 (lista_sentencias -> .) ]
  ! BREAK           [ reduce using rule 20 (lista_sentencias -> .) ]
  ! INCREMENTO      [ reduce using rule 20 (lista_sentencias -> .) ]
  ! DECREMENTO      [ reduce using rule 20 (lista_sentencias -> .) ]
  ! CONTINUE        [ reduce using rule 20 (lista_sentencias -> .) ]
  ! INT             [ reduce using rule 20 (lista_sentencias -> .) ]
  ! CHAR            [ reduce using rule 20 (lista_sentencias -> .) ]
  ! DOUBLE          [ reduce using rule 20 (lista_sentencias -> .) ]
  ! FLOAT           [ reduce using rule 20 (lista_sentencias -> .) ]
  ! ENTERO          [ reduce using rule 20 (lista_sentencias -> .) ]
  ! DECIMAL         [ reduce using rule 20 (lista_sentencias -> .) ]
  ! CADENA          [ reduce using rule 20 (lista_sentencias -> .) ]
  ! ID              [ reduce using rule 20 (lista_sentencias -> .) ]

    inicio                         shift and go to state 1
    lista_sentencias               shift and go to state 2
    sentencia                      shift and go to state 3
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    fun_if                         shift and go to state 6
    fun_switch                     shift and go to state 7
    fun_for                        shift and go to state 8
    fun_while                      shift and go to state 9
    fun_do_while                   shift and go to state 10
    print                          shift and go to state 11
    fun_return                     shift and go to state 12
    fun_break                      shift and go to state 13
    incre_decre                    shift and go to state 14
    fun_continue                   shift and go to state 15
    tipo                           shift and go to state 16
    lista_asignacion               shift and go to state 17
    val                            shift and go to state 24
    bloque_asignacion              shift and go to state 34
    variables_array                shift and go to state 39
    tipo_ID                        shift and go to state 40

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> lista_sentencias .
    (18) lista_sentencias -> lista_sentencias . sentencia
    (21) sentencia -> . declaracion PUNTOCOMA
    (22) sentencia -> . asignacion PUNTOCOMA
    (23) sentencia -> . fun_if
    (24) sentencia -> . fun_switch
    (25) sentencia -> . fun_for
    (26) sentencia -> . fun_while
    (27) sentencia -> . fun_do_while
    (28) sentencia -> . print
    (29) sentencia -> . fun_return PUNTOCOMA
    (30) sentencia -> . fun_break PUNTOCOMA
    (31) sentencia -> . incre_decre PUNTOCOMA
    (32) sentencia -> . fun_continue PUNTOCOMA
    (33) declaracion -> . tipo lista_declaracion
    (53) asignacion -> . lista_asignacion
    (79) fun_if -> . IF PARENTA operaciones PARENTC bloque_sentencias
    (80) fun_if -> . IF PARENTA operaciones PARENTC bloque_sentencias ELSE fun_if
    (81) fun_if -> . IF PARENTA operaciones PARENTC bloque_sentencias ELSE bloque_sentencias
    (82) fun_switch -> . SWITCH PARENTA operaciones PARENTC LLAVEA list_switch default LLAVEC
    (83) fun_switch -> . SWITCH PARENTA operaciones PARENTC LLAVEA list_switch LLAVEC
    (84) fun_switch -> . SWITCH PARENTA operaciones PARENTC LLAVEA default LLAVEC
    (85) fun_switch -> . SWITCH PARENTA operaciones PARENTC LLAVEA LLAVEC
    (92) fun_for -> . FOR PARENTA declaracion PUNTOCOMA operaciones PUNTOCOMA incre_decre PARENTC bloque_sentencias
    (93) fun_for -> . FOR PARENTA asignacion PUNTOCOMA operaciones PUNTOCOMA incre_decre PARENTC bloque_sentencias
    (94) fun_while -> . WHILE PARENTA operaciones PARENTC bloque_sentencias
    (95) fun_do_while -> . DO bloque_sentencias WHILE PARENTA operaciones PARENTC PUNTOCOMA
    (104) print -> . PRINTF PARENTA val PARENTC PUNTOCOMA
    (96) fun_return -> . RETURN operaciones
    (97) fun_return -> . RETURN incre_decre
    (98) fun_return -> . RETURN
    (99) fun_break -> . BREAK
    (100) incre_decre -> . INCREMENTO val
    (101) incre_decre -> . DECREMENTO val
    (102) incre_decre -> . val INCREMENTO
    (103) incre_decre -> . val DECREMENTO
    (105) fun_continue -> . CONTINUE
    (44) tipo -> . INT
    (45) tipo -> . CHAR
    (46) tipo -> . DOUBLE
    (47) tipo -> . FLOAT
    (54) lista_asignacion -> . lista_asignacion COMA bloque_asignacion
    (55) lista_asignacion -> . bloque_asignacion
    (132) val -> . ENTERO
    (133) val -> . DECIMAL
    (134) val -> . CADENA
    (135) val -> . CHAR
    (136) val -> . ID
    (137) val -> . variables_array
    (56) bloque_asignacion -> . tipo_ID tipo_asignacion operaciones
    (57) bloque_asignacion -> . tipo_ID IGUAL SCANF PARENTA PARENTC
    (58) bloque_asignacion -> . tipo_ID tipo_asignacion LLAVEA lista_filas LLAVEC
    (59) bloque_asignacion -> . tipo_ID tipo_asignacion LLAVEA lista_val LLAVEC
    (138) variables_array -> . ID indices
    (48) tipo_ID -> . ID
    (49) tipo_ID -> . ID dimension

    $end            reduce using rule 1 (inicio -> lista_sentencias .)
    IF              shift and go to state 18
    SWITCH          shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    DO              shift and go to state 22
    PRINTF          shift and go to state 23
    RETURN          shift and go to state 25
    BREAK           shift and go to state 26
    INCREMENTO      shift and go to state 27
    DECREMENTO      shift and go to state 28
    CONTINUE        shift and go to state 29
    INT             shift and go to state 30
    CHAR            shift and go to state 31
    DOUBLE          shift and go to state 32
    FLOAT           shift and go to state 33
    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 36
    CADENA          shift and go to state 37
    ID              shift and go to state 38

    sentencia                      shift and go to state 41
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    fun_if                         shift and go to state 6
    fun_switch                     shift and go to state 7
    fun_for                        shift and go to state 8
    fun_while                      shift and go to state 9
    fun_do_while                   shift and go to state 10
    print                          shift and go to state 11
    fun_return                     shift and go to state 12
    fun_break                      shift and go to state 13
    incre_decre                    shift and go to state 14
    fun_continue                   shift and go to state 15
    tipo                           shift and go to state 16
    lista_asignacion               shift and go to state 17
    val                            shift and go to state 24
    bloque_asignacion              shift and go to state 34
    variables_array                shift and go to state 39
    tipo_ID                        shift and go to state 40

state 3

    (19) lista_sentencias -> sentencia .

    IF              reduce using rule 19 (lista_sentencias -> sentencia .)
    SWITCH          reduce using rule 19 (lista_sentencias -> sentencia .)
    FOR             reduce using rule 19 (lista_sentencias -> sentencia .)
    WHILE           reduce using rule 19 (lista_sentencias -> sentencia .)
    DO              reduce using rule 19 (lista_sentencias -> sentencia .)
    PRINTF          reduce using rule 19 (lista_sentencias -> sentencia .)
    RETURN          reduce using rule 19 (lista_sentencias -> sentencia .)
    BREAK           reduce using rule 19 (lista_sentencias -> sentencia .)
    INCREMENTO      reduce using rule 19 (lista_sentencias -> sentencia .)
    DECREMENTO      reduce using rule 19 (lista_sentencias -> sentencia .)
    CONTINUE        reduce using rule 19 (lista_sentencias -> sentencia .)
    INT             reduce using rule 19 (lista_sentencias -> sentencia .)
    CHAR            reduce using rule 19 (lista_sentencias -> sentencia .)
    DOUBLE          reduce using rule 19 (lista_sentencias -> sentencia .)
    FLOAT           reduce using rule 19 (lista_sentencias -> sentencia .)
    ENTERO          reduce using rule 19 (lista_sentencias -> sentencia .)
    DECIMAL         reduce using rule 19 (lista_sentencias -> sentencia .)
    CADENA          reduce using rule 19 (lista_sentencias -> sentencia .)
    ID              reduce using rule 19 (lista_sentencias -> sentencia .)
    $end            reduce using rule 19 (lista_sentencias -> sentencia .)
    LLAVEC          reduce using rule 19 (lista_sentencias -> sentencia .)
    DEFAULT         reduce using rule 19 (lista_sentencias -> sentencia .)
    CASE            reduce using rule 19 (lista_sentencias -> sentencia .)


state 4

    (21) sentencia -> declaracion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42


state 5

    (22) sentencia -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 43


state 6

    (23) sentencia -> fun_if .

    IF              reduce using rule 23 (sentencia -> fun_if .)
    SWITCH          reduce using rule 23 (sentencia -> fun_if .)
    FOR             reduce using rule 23 (sentencia -> fun_if .)
    WHILE           reduce using rule 23 (sentencia -> fun_if .)
    DO              reduce using rule 23 (sentencia -> fun_if .)
    PRINTF          reduce using rule 23 (sentencia -> fun_if .)
    RETURN          reduce using rule 23 (sentencia -> fun_if .)
    BREAK           reduce using rule 23 (sentencia -> fun_if .)
    INCREMENTO      reduce using rule 23 (sentencia -> fun_if .)
    DECREMENTO      reduce using rule 23 (sentencia -> fun_if .)
    CONTINUE        reduce using rule 23 (sentencia -> fun_if .)
    INT             reduce using rule 23 (sentencia -> fun_if .)
    CHAR            reduce using rule 23 (sentencia -> fun_if .)
    DOUBLE          reduce using rule 23 (sentencia -> fun_if .)
    FLOAT           reduce using rule 23 (sentencia -> fun_if .)
    ENTERO          reduce using rule 23 (sentencia -> fun_if .)
    DECIMAL         reduce using rule 23 (sentencia -> fun_if .)
    CADENA          reduce using rule 23 (sentencia -> fun_if .)
    ID              reduce using rule 23 (sentencia -> fun_if .)
    $end            reduce using rule 23 (sentencia -> fun_if .)
    LLAVEC          reduce using rule 23 (sentencia -> fun_if .)
    DEFAULT         reduce using rule 23 (sentencia -> fun_if .)
    CASE            reduce using rule 23 (sentencia -> fun_if .)


state 7

    (24) sentencia -> fun_switch .

    IF              reduce using rule 24 (sentencia -> fun_switch .)
    SWITCH          reduce using rule 24 (sentencia -> fun_switch .)
    FOR             reduce using rule 24 (sentencia -> fun_switch .)
    WHILE           reduce using rule 24 (sentencia -> fun_switch .)
    DO              reduce using rule 24 (sentencia -> fun_switch .)
    PRINTF          reduce using rule 24 (sentencia -> fun_switch .)
    RETURN          reduce using rule 24 (sentencia -> fun_switch .)
    BREAK           reduce using rule 24 (sentencia -> fun_switch .)
    INCREMENTO      reduce using rule 24 (sentencia -> fun_switch .)
    DECREMENTO      reduce using rule 24 (sentencia -> fun_switch .)
    CONTINUE        reduce using rule 24 (sentencia -> fun_switch .)
    INT             reduce using rule 24 (sentencia -> fun_switch .)
    CHAR            reduce using rule 24 (sentencia -> fun_switch .)
    DOUBLE          reduce using rule 24 (sentencia -> fun_switch .)
    FLOAT           reduce using rule 24 (sentencia -> fun_switch .)
    ENTERO          reduce using rule 24 (sentencia -> fun_switch .)
    DECIMAL         reduce using rule 24 (sentencia -> fun_switch .)
    CADENA          reduce using rule 24 (sentencia -> fun_switch .)
    ID              reduce using rule 24 (sentencia -> fun_switch .)
    $end            reduce using rule 24 (sentencia -> fun_switch .)
    LLAVEC          reduce using rule 24 (sentencia -> fun_switch .)
    DEFAULT         reduce using rule 24 (sentencia -> fun_switch .)
    CASE            reduce using rule 24 (sentencia -> fun_switch .)


state 8

    (25) sentencia -> fun_for .

    IF              reduce using rule 25 (sentencia -> fun_for .)
    SWITCH          reduce using rule 25 (sentencia -> fun_for .)
    FOR             reduce using rule 25 (sentencia -> fun_for .)
    WHILE           reduce using rule 25 (sentencia -> fun_for .)
    DO              reduce using rule 25 (sentencia -> fun_for .)
    PRINTF          reduce using rule 25 (sentencia -> fun_for .)
    RETURN          reduce using rule 25 (sentencia -> fun_for .)
    BREAK           reduce using rule 25 (sentencia -> fun_for .)
    INCREMENTO      reduce using rule 25 (sentencia -> fun_for .)
    DECREMENTO      reduce using rule 25 (sentencia -> fun_for .)
    CONTINUE        reduce using rule 25 (sentencia -> fun_for .)
    INT             reduce using rule 25 (sentencia -> fun_for .)
    CHAR            reduce using rule 25 (sentencia -> fun_for .)
    DOUBLE          reduce using rule 25 (sentencia -> fun_for .)
    FLOAT           reduce using rule 25 (sentencia -> fun_for .)
    ENTERO          reduce using rule 25 (sentencia -> fun_for .)
    DECIMAL         reduce using rule 25 (sentencia -> fun_for .)
    CADENA          reduce using rule 25 (sentencia -> fun_for .)
    ID              reduce using rule 25 (sentencia -> fun_for .)
    $end            reduce using rule 25 (sentencia -> fun_for .)
    LLAVEC          reduce using rule 25 (sentencia -> fun_for .)
    DEFAULT         reduce using rule 25 (sentencia -> fun_for .)
    CASE            reduce using rule 25 (sentencia -> fun_for .)


state 9

    (26) sentencia -> fun_while .

    IF              reduce using rule 26 (sentencia -> fun_while .)
    SWITCH          reduce using rule 26 (sentencia -> fun_while .)
    FOR             reduce using rule 26 (sentencia -> fun_while .)
    WHILE           reduce using rule 26 (sentencia -> fun_while .)
    DO              reduce using rule 26 (sentencia -> fun_while .)
    PRINTF          reduce using rule 26 (sentencia -> fun_while .)
    RETURN          reduce using rule 26 (sentencia -> fun_while .)
    BREAK           reduce using rule 26 (sentencia -> fun_while .)
    INCREMENTO      reduce using rule 26 (sentencia -> fun_while .)
    DECREMENTO      reduce using rule 26 (sentencia -> fun_while .)
    CONTINUE        reduce using rule 26 (sentencia -> fun_while .)
    INT             reduce using rule 26 (sentencia -> fun_while .)
    CHAR            reduce using rule 26 (sentencia -> fun_while .)
    DOUBLE          reduce using rule 26 (sentencia -> fun_while .)
    FLOAT           reduce using rule 26 (sentencia -> fun_while .)
    ENTERO          reduce using rule 26 (sentencia -> fun_while .)
    DECIMAL         reduce using rule 26 (sentencia -> fun_while .)
    CADENA          reduce using rule 26 (sentencia -> fun_while .)
    ID              reduce using rule 26 (sentencia -> fun_while .)
    $end            reduce using rule 26 (sentencia -> fun_while .)
    LLAVEC          reduce using rule 26 (sentencia -> fun_while .)
    DEFAULT         reduce using rule 26 (sentencia -> fun_while .)
    CASE            reduce using rule 26 (sentencia -> fun_while .)


state 10

    (27) sentencia -> fun_do_while .
